--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-order-pipe": "^2.1.1",
+    "ngx-pagination": "^5.0.0",
+    "ngx-print": "^1.2.0-beta.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
