--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.0.1",
     "bootswatch": "^5.0.1",
     "jquery": "^3.6.0",
+    "nanoid": "^3.1.23",
     "ngx-bootstrap": "^6.2.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.1.1",
@@ -33,6 +34,7 @@
     "ngx-print": "^1.2.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
